<resources>
    <string name="app_name">Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="btn_confirm">OK</string>
    <string name="btn_scan">Skan</string>
    <string name="btn_softSettings">Zarządzaj</string>
    <string name="btn_save">Zapisz</string>
    <string name="btn_discard">Odrzuć</string>
    <string name="btn_yes">Tak</string>
    <string name="btn_no">Nie</string>

    <string name="alert_emptyBarcode">Nie podano kodu urządzenia.</string>
    <string name="alert_unknownBarcodeTitle">Nieznany kod urządzenia</string>
    <string name="alert_unknownBarcodeText">W bazie nie ma urządzenia o żądanym kodzie.\nCzy chcesz dodać teraz urządzenie?</string>
    <string name="alert_computerSave">Zmiany zostały zapisane</string>
    <string name="alert_error">Operacja zakończona niepowodzeniem</string>

    <string name="message_barcodeAdded">Dodano urządzenie</string>

    <string name="desc_barcode">Kod</string>
    <string name="desc_editComputer">Edytowany komputer:</string>
    <string name="desc_room">Sala</string>
    <string name="desc_IP">Adres IP</string>
    <string name="desc_MAC">MAC</string>
    <string name="desc_os">System operacyjny</string>
    <string name="desc_name">Nazwa komputera</string>
    <string name="desc_key">Klucz licencyjny</string>
    <string name="desc_soft">Zainstalowane oprogramowanie:</string>
    <string name="additional">Konfiguracja komputera - pola nieobowiązkowe:</string>

    <string-array name="rooms_array">
        <item>308</item>
        <item>309</item>
        <item>406</item>
    </string-array>

    <string-array name="os_array">
        <item>Windows 7</item>
        <item>Windows 10</item>
        <item>Linux</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
