<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightBlue"
                    android:padding="2dp">

                    <TextView
                        android:text="@string/desc_barcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewBarcode"
                        android:layout_weight="1"
                        android:textAlignment="gravity" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/editTextBarCode"
                        android:layout_weight="1"
                        android:textColorLink="?attr/colorPrimary" />

                    <Button
                        android:text="@string/btn_confirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonOK"
                        android:layout_weight="600"
                        android:onClick="getComputerDataButtonOnclick" />

                    <Button
                        android:text="@string/btn_scan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonScan"
                        android:layout_weight="400"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/editForm"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:text="@string/desc_editComputer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewDescBarcode"
                            android:layout_weight="1" />

                        <TextView
                            android:text="x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewValueBarcode"
                            android:paddingLeft="10dp"
                            android:layout_weight="1" />


                    </LinearLayout>

                    <!-- sala -->

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:text="@string/desc_room"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewRoom"
                            android:layout_weight="1" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/spinner_room"
                            android:layout_weight="1"
                            android:entries="@array/rooms_array" />

                    </LinearLayout>


                    <!-- syst operacyjny -->
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:text="@string/desc_os"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewOS"
                            android:layout_weight="1" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/spinner_os"
                            android:layout_weight="1"
                            android:entries="@array/os_array" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="40dp">

                        <TextView
                            android:text="@string/additional"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewAdditional"
                            android:textStyle="bold"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <!-- nazwa -->
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <TextView
                            android:text="@string/desc_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewName"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:id="@+id/editTextName"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <!-- ip -->
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <TextView
                            android:text="@string/desc_IP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewIP"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:id="@+id/editTextIP"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <!-- MAC -->
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        >

                        <TextView
                            android:text="@string/desc_MAC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewMAC"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:id="@+id/editTextMAC"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <!-- klucz -->
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <TextView
                            android:text="@string/desc_key"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewKey"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:id="@+id/editTextKey"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <!-- oprogramowanie -->
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:gravity="right"
                        android:layout_marginTop="20dp"
                        android:layout_weight="0.30">

                        <TextView
                            android:text="@string/desc_soft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewSoft"
                            android:layout_weight="4"
                            android:gravity="bottom"
                            android:layout_gravity="bottom" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:ems="7"
                            android:id="@+id/editTextSoftware" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="30dp">

                        <Button
                            android:text="@string/btn_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_alignParentRight="true"
                            android:id="@+id/buttonSave"
                            android:onClick="SaveChanges" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>